# C-Transformer-Implementation-with-LibTorch

./: .gitattributes  CMakeLists.txt  README.md  main.cpp  main.py  test.cpp
config/: config.py
dataset/: data_utils.py  dataset.py
model/: attention.cpp  attention.h  attention.py  data_loader.h  decoder.cpp  decoder.h  decoder.py  embedding.cpp  embedding.h  embedding.py  encoder.cpp  encoder.h  encoder.py  mask.h  scheduler.h  transformer.h  transformer.py
test/: test.py
train/: train.py
